update: اضافه‌کردن log monitor، اسکریپت collector و تنظیم خودکار متریک + هشدار گرافیکی

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@
 # 🆔 File ID: 6834ac92309c81918cc0734c580e5b11
 # 📃 Purpose: لیست وابستگی‌های مورد نیاز برای اجرای پروژه VPNFailoverManager
 # 📅 Created on: 2025-05-26
+# 📌 Edited on: 2025-05-29 | Edit #1: افزودن کتابخانه psutil برای استخراج اطلاعات سیستم و شبکه
 
 PyQt5>=5.15.9
+psutil>=5.9.8
